--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Document</title>
 </head>
 
-<body class=".inter-font">
+<body class="inter-font">
     <section class="navbar-wrap">
         <nav class="container nav-content">
             <h2 class="nav-title">Fitness</h2>
@@ -21,7 +25,34 @@
                 <p>Contact</p>
                 <p>About</p>
             </div>
+
         </nav>
+    </section>
+    <section class="container banner-content">
+        <div class="banner-info">
+            <h2>Get body in <span class="styled-text">shape</span> & stay healthy</h2>
+            <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you
+                get fit and stay
+                fit!</p>
+            <div class="btn-container">
+                <button class="primary-btn">Join Club Now</button>
+                <button class=" primary-btn secondary-btn">Download App</button>
+            </div>
+        </div>
+        <div class="banner-img">
+            <img src="./images/banner.png">
+            <div class="img-box1">
+                <h4>500+</h4>
+                <p>Free Workout Videos</p>
+            </div>
+            <div class="img-box2">
+                <div class="dot"><i style="text-align: center;" class="fa-solid fa-play"></i></div>
+                <div class="text-info">
+                    <h4>350+</h4>
+                    <p>Video tutorial</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
