--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
             </div>
         </div>
     </section>
+    <section class="container habit-section">
+        <h1>Change Your Habits</h1>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <div class="exercise-info">
+            <div class="exercise-details">
+                <img src="./images/image 3.png">
+                <h3>Movement</h3>
+                <p>Encourages consistent and precise movement as a foundation for fitness.</p>
+            </div>
+            <div class="exercise-details">
+                <img src="./images/image 2.png">
+                <h3>Time</h3>
+                <p>Emphasizes the importance of using time efficiently during workouts.</p>
+            </div>
+            <div class="exercise-details">
+                <img src="./images/image 4.png">
+                <h3>Practice</h3>
+                <p>Highlights the role of consistent practice in achieving fitness goals.</p>
+            </div>
+            <div class="exercise-details">
+                <img src="./images/image 5.png">
+                <h3>Weight Loss</h3>
+                <p>Focuses on a balanced approach to losing weight, stressing the importance of consistency.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
