linear gradient is added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body class="inter-font">
-    <section class="navbar-wrap">
-        <nav class="container nav-content">
+    <section class="nav-banner-container">
+        <nav class=" nav-content">
             <h2 class="nav-title">Fitness</h2>
             <div class="nav-options">
                 <p>Home</p>
@@ -27,29 +27,30 @@
             </div>
 
         </nav>
-    </section>
-    <section class="container banner-content">
-        <div class="banner-info">
-            <h2>Get body in <span class="styled-text">shape</span> & stay healthy</h2>
-            <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you
-                get fit and stay
-                fit!</p>
-            <div class="btn-container">
-                <button class="primary-btn">Join Club Now</button>
-                <button class=" primary-btn secondary-btn">Download App</button>
+        <div class="banner-content">
+            <div class="banner-info">
+                <h2>Get body in <span class="styled-text">shape</span> & stay healthy</h2>
+                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help
+                    you
+                    get fit and stay
+                    fit!</p>
+                <div class="btn-container">
+                    <button class="primary-btn">Join Club Now</button>
+                    <button class=" primary-btn secondary-btn">Download App</button>
+                </div>
             </div>
-        </div>
-        <div class="banner-img">
-            <img src="./images/banner.png">
-            <div class="img-box1">
-                <h4>500+</h4>
-                <p>Free Workout Videos</p>
-            </div>
-            <div class="img-box2">
-                <div class="dot"><i style="text-align: center;" class="fa-solid fa-play"></i></div>
-                <div class="text-info">
-                    <h4>350+</h4>
-                    <p>Video tutorial</p>
+            <div class="banner-img">
+                <img src="./images/banner.png">
+                <div class="img-box1">
+                    <h4>500+</h4>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="img-box2">
+                    <div class="dot"><i style="text-align: center;" class="fa-solid fa-play"></i></div>
+                    <div class="text-info">
+                        <h4>350+</h4>
+                        <p>Video tutorial</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,6 +80,9 @@
                 <p>Focuses on a balanced approach to losing weight, stressing the importance of consistency.</p>
             </div>
         </div>
+    </section>
+    <section class="container run-mile-section">
+
     </section>
 </body>
 
