--- a/index.html
+++ b/index.html
@@ -56,33 +56,46 @@
         </div>
     </section>
     <section class="container habit-section">
-        <h1>Change Your Habits</h1>
-        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <h1 class="primary-header">Change Your Habits</h1>
+        <p class="primary-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or
+            access to a gym.</p>
         <div class="exercise-info">
             <div class="exercise-details">
                 <img src="./images/image 3.png">
                 <h3>Movement</h3>
-                <p>Encourages consistent and precise movement as a foundation for fitness.</p>
+                <p class="primary-text">Encourages consistent and precise movement as a foundation for fitness.</p>
             </div>
             <div class="exercise-details">
                 <img src="./images/image 2.png">
                 <h3>Time</h3>
-                <p>Emphasizes the importance of using time efficiently during workouts.</p>
+                <p class="primary-text">Emphasizes the importance of using time efficiently during workouts.</p>
             </div>
             <div class="exercise-details">
                 <img src="./images/image 4.png">
                 <h3>Practice</h3>
-                <p>Highlights the role of consistent practice in achieving fitness goals.</p>
+                <p class="primary-text">Highlights the role of consistent practice in achieving fitness goals.</p>
             </div>
             <div class="exercise-details">
                 <img src="./images/image 5.png">
                 <h3>Weight Loss</h3>
-                <p>Focuses on a balanced approach to losing weight, stressing the importance of consistency.</p>
+                <p class="primary-text">Focuses on a balanced approach to losing weight, stressing the importance of
+                    consistency.</p>
             </div>
         </div>
     </section>
     <section class="container run-mile-section">
-
+        <div class="run-mile-info">
+            <h1 class="primary-header">Run an Extra
+                Mile Easily</h1>
+            <p class="primary-text">We believe fitness should be accessible to everyone, everywhere, regardless of
+                income or access to a gym.
+                With hundreds
+                of professional workouts.</p>
+            <button class="primary-btn">Join Now</button>
+        </div>
+        <div class="run-mile-img">
+            <img src="./images/run.jpg">
+        </div>
     </section>
 </body>
 
