--- a/index.html
+++ b/index.html
@@ -158,6 +158,59 @@
             </div>
         </div>
     </section>
+    <section class=" container team-container ">
+        <h1 class="primary-header">Meet Our Team</h1>
+        <p class="primary-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or
+            access to a gym.</p>
+        <div class="team-imgs">
+            <div class="img-card">
+                <img src="./images/trainer1.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Jerome Bell</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/trainer2.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Cameron Willi</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/trainer3.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Cameron Willi</h4>
+                    <p>Trainer</p>
+                </div>
+
+            </div>
+            <div class="img-card">
+                <img src="./images/trainer4.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Dianne Russell</h4>
+                    <p>Trainer</p>
+                </div>
+
+            </div>
+            <div class="img-card">
+                <img src="./images/trainer5.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Cody Fisher</h4>
+                    <p>Trainer</p>
+                </div>
+
+            </div>
+            <div class="img-card">
+                <img src="./images/trainer6.png" alt="" srcset="">
+                <div class="img-info">
+                    <h4>Theresa Webb</h4>
+                    <p>Trainer</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
