--- a/index.html
+++ b/index.html
@@ -211,6 +211,52 @@
             </div>
         </div>
     </section>
+    <section class="pricing-section">
+        <h2>CHOOSE YOUR PRICING PLAN</h2>
+        <div class="pricing-cards">
+            <div class="pricing-card">
+                <h3>Class drop-in</h3>
+                <p class="price">$ 39.0</p>
+
+                <ul>
+                    <li>Free riding</li>
+                    <li>Unlimited equipments</li>
+                    <li>Personal trainer</li>
+                    <li>Weight losing classes</li>
+                    <li>Month to mouth</li>
+                    <li>No time restriction</li>
+                </ul>
+                <button>ENROLL NOW</button>
+            </div>
+            <div class="pricing-card">
+                <h3>12 Month unlimited</h3>
+                <p class="price">$ 99.0</p>
+                <ul>
+                    <li>Free riding</li>
+                    <li>Unlimited equipments</li>
+                    <li>Personal trainer</li>
+                    <li>Weight losing classes</li>
+                    <li>Month to mouth</li>
+                    <li>No time restriction</li>
+                </ul>
+                <button>ENROLL NOW</button>
+            </div>
+            <div class="pricing-card">
+                <h3>6 Month unlimited</h3>
+                <p class="price">$ 59.0</p>
+                <ul>
+                    <li>Free riding</li>
+                    <li>Unlimited equipments</li>
+                    <li>Personal trainer</li>
+                    <li>Weight losing classes</li>
+                    <li>Month to mouth</li>
+                    <li>No time restriction</li>
+                </ul>
+                <button>ENROLL NOW</button>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
