--- a/index.html
+++ b/index.html
@@ -211,13 +211,12 @@
             </div>
         </div>
     </section>
-    <section class="pricing-section">
+    <section class="pricing-section container">
         <h2>CHOOSE YOUR PRICING PLAN</h2>
         <div class="pricing-cards">
             <div class="pricing-card">
                 <h3>Class drop-in</h3>
                 <p class="price">$ 39.0</p>
-
                 <ul>
                     <li>Free riding</li>
                     <li>Unlimited equipments</li>
@@ -256,6 +255,40 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer-section">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <h1>Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. With hundreds
+                    of professional workouts.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Get Started</h3>
+                <ul>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Affiliate Program</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Get Started</h3>
+                <ul>
+                    <li><a href="#">Fitness</a></li>
+                    <li><a href="#">Platform</a></li>
+                    <li><a href="#">Workout Library</a></li>
+                    <li><a href="#">App Design</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>All rights reserved &copy;Fitness 2024</p>
+        </div>
+    </footer>
+
+
 
 </body>
 
