--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <script src="https://kit.fontawesome.com/8c34b58f97.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -24,6 +25,9 @@
                 <p>Service</p>
                 <p>Contact</p>
                 <p>About</p>
+            </div>
+            <div class="menu-bar">
+                <i class="fa-solid fa-bars"></i>
             </div>
 
         </nav>
