responsive code is added

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>
     </section>
     <section class="pricing-section container">
-        <h2>CHOOSE YOUR PRICING PLAN</h2>
+        <h1 class="primary-header">CHOOSE YOUR PRICING PLAN</h1>
         <div class="pricing-cards">
             <div class="pricing-card">
                 <h3>Class drop-in</h3>
@@ -259,7 +259,6 @@
             </div>
         </div>
     </section>
-
     <footer class="footer-section">
         <div class="footer-container">
             <div class="footer-logo">
